Bug 501618 - dragging a file into Kate causes the open document to quickly scroll upward
Summary: dragging a file into Kate causes the open document to quickly scroll upward
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.12.3
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-03-17 05:28 UTC by S. Christian Collins
Modified: 2025-03-22 18:36 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
video showing the bug (795.97 KB, video/webm)
2025-03-17 05:28 UTC, S. Christian Collins
Details

Note You need to log in before you can comment on or make changes to this bug.
Description S. Christian Collins 2025-03-17 05:28:15 UTC
Created attachment 179487 [details]
video showing the bug

SUMMARY
Attempting to drag and drop a file from Dolphin into Kate often causes the currently active document to scroll quickly upward. I find that usually the first drag-and-drop operation works fine, and then subsequent attempts cause the scrolling behavior.

In the attached video, you can see my first drag-and-drop action does not cause the bug (I hit Esc to abort the operation), but then my second attempt causes the scrolling.

STEPS TO REPRODUCE
1. Open a long document in Kate and scroll all the way to the bottom.
2. Drag-and-drop another document from Dolphin into Kate.

OBSERVED RESULT
While dragging the file into Kate, the open document in Kate scrolls upward very quickly.

EXPECTED RESULT
The open document should not scroll.

SOFTWARE/OS VERSIONS
Linux: Fedora Linux Plasma Desktop Edition 41
KDE Plasma Version: 6.3.3
KDE Frameworks Version: 6.12.0
Qt Version: 6.8.2
Graphics Platform: Wayland
Comment 1 Christoph Cullmann 2025-03-22 18:19:41 UTC
Can reproduce that.
Comment 2 Christoph Cullmann 2025-03-22 18:36:34 UTC
Git commit ae4df9155fbbeb8d91c9d9ec171a65dbc5bb4f31 by Christoph Cullmann.
Committed on 22/03/2025 at 18:36.
Pushed by cullmann into branch 'master'.

don't move the cursor to the current drop location for file drops

M  +5    -1    src/view/kateviewinternal.cpp

https://invent.kde.org/frameworks/ktexteditor/-/commit/ae4df9155fbbeb8d91c9d9ec171a65dbc5bb4f31