don't move the cursor to the current drop location for file drops

BUG: 501618